web/components/Layout/Section/Section.module.scss
$largeBreakpoint: 1079px;
$mediumBreakpoint: 767px;

.outer {
  // Default horisontal padding
  padding: 0 var(--page-gutter);

  // Vertical margins
  &-size-none {
    margin: 0;
  }
  &-size-xsmall {
    margin: var(--spacing-3) 0;
  }
  &-size-small {
    margin: var(--spacing-5) 0;
  }
  &-size-medium {
    margin: var(--spacing-10) 0;

    @media (max-width: $mediumBreakpoint) {
      margin: var(--spacing-7) 0;
    }
  }
  &-size-large {
    margin: var(--spacing-10) 0;

    @media (max-width: $mediumBreakpoint) {
      margin: var(--spacing-8) 0;
    }
  }

  // Background colors
  &-color-peach {
    background-color: var(--color-peach);
  }
  &-color-cream {
    background-color: var(---color-cream);
  }
  &-color-red {
    background-color: var(--color-red);
    color: white;
  }
}

.inner {
  margin: 0 auto;
  max-width: var(--page-width-max);

  // Vertical padding
  &-size-small {
    padding: var(--spacing-6) 0;
  }
  &-size-medium {
    padding: var(--spacing-8) 0;
  }
  &-size-large {
    padding: var(--spacing-10) 0;
  }

  // Limit width
  &-limited-width {
    max-width: var(--page-width-limited);
    margin: 0 auto; // Centered horisontally
  }

  &-no-limit {
    max-width: none;
  }

  // Center text
  &-center {
    text-align: center;
  }
}

